# stupid_lcd_improved

./: CMakeLists.txt  README.md  byteToNib.c  byteToNib.h  configLCD.c  configLCD.h  configPins.c  configPins.h  constants.h  main.c  pulse.c  pulse.h  sendNibble.c  sendNibble.h
