idf_component_register(SRCS 
                    "main.c"
                    "constants.h"
                     "configPins.c"
                      "pulse.c"
                       "byteToNib.c"
                       "sendNibble.c"
                        "configLCD.c"
                    INCLUDE_DIRS 
                    ".")
                    